k8s/overlays/production/patches/mastodon-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-worker
spec:
  template:
    spec:
      containers:
      - name: mastodon
        resources:
          requests:
            memory: 1Gi
            cpu: 250m
          limits:
            memory: 1Gi
            cpu: 250m
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
