k8s/overlays/production/patches/worker.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: worker
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: sidekiq
        resources:
          requests:
            cpu: 20m
            memory: 128Mi
