k8s/overlays/production/patches/assets.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: assets
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: mastodon
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: assets
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "assets-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
