k8s/overlays/production/patches/files.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
spec:
  replicas: 2
  template:
    metadata:
      labels:
        deployment: files
    spec:
      containers:
      - name: manael
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: files
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "files-backend-config"}'
