k8s/overlays/production/patches/manael.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manael
spec:
  template:
    spec:
      containers:
      - name: manael
        resources:
          requests:
            memory: 1.5Gi
            cpu: 250m
          limits:
            memory: 1.5Gi
            cpu: 250m
        livenessProbe:
          httpGet:
            port: 8080
            path: /favicon.ico
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            port: 8080
            path: /favicon.ico
          initialDelaySeconds: 30
          periodSeconds: 20
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
---
apiVersion: v1
kind: Service
metadata:
  name: manael
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "manael-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
