k8s/overlays/production/patches/mastodon-assets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-assets
spec:
  replicas: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-assets
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "mastodon-assets-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
