k8s/overlays/production/patches/mastodon-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-streaming
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: mastodon
        resources:
          requests:
            memory: 128Mi
            cpu: 125m
          limits:
            memory: 512Mi
            cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "mastodon-streaming-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
