k8s/overlays/production/patches/mastodon-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: mastodon
        resources:
          limits:
            memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-web
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "mastodon-web-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
