k8s/overlays/production/patches/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "nginx-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
