k8s/overlays/production/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ykzts-technology-ip
    networking.gke.io/managed-certificates: mastodon-infra
    networking.gke.io/v1beta1.FrontendConfig: mastodon-frontend-config
